--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookread_frontend",
-  "homepage": "https://jvinizds.github.io/bookread_frontend",
+  "homepage": "https://jvinizds.github.io/BookRead-FrontEnd",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
